--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ defusedxml==0.7.1
 Django==3.2.8
 django-allauth==0.45.0
 django-cors-headers==3.10.0
+django-filter==21.1
 django-rest-auth==0.9.5
 django-restframework==0.0.1
 djangorestframework==3.12.4
