--- a/.gitignore
+++ b/.gitignore
@@ -48,7 +48,7 @@ atlassian-ide-plugin.xml
 # Python # 
 *.py[cod] 
 *$py.class 
-
+assets/
 # Distribution / packaging 
 .Python build/ 
 develop-eggs/ 
